...
                            elevation = elevation
                        )
                    },
                    snackbarHost = {
                        SnackbarHost(
                            modifier = Modifier
                                .testTag("RestoreSnackbar"),
                            hostState = scaffoldState.snackbarHostState,
                            snackbar = {
                                Snackbar(
                                    snackbarData = it,
                                    backgroundColor = MaterialTheme.colors.background,
                                    contentColor = MaterialTheme.colors.onBackground
...
