...
    <string name="Restore">Restore</string>
    <string name="DeleteAlertText">Are you sure you want to delete this file in the cloud?</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="SureQuestion">Sure?</string>
    <string name="ErrorLoadingFiles">Couldn\'t load files for this backup…</string>
    <string name="NoFiles">There are no files to display for this backup yet…</string>
    <string name="RestoreAlertText">Are you sure you want to restore this backup? Files can be replaced by this!</string>
    <string name="RestoringBackup">Restoring backup…</string>
    <string name="RestoringBackupSucceed">Successfully restored the backup!</string>
    <string name="RestoringBackupError">Couldn\'t restore the backup!</string>
    <string name="SFTP" translatable="false">SFTP</string>
    <string name="EnterName">Please enter a name</string>
...
